--- a/Raketa1/Raketa1.csproj
+++ b/Raketa1/Raketa1.csproj
@@ -119,6 +119,12 @@
     <Content Include="Resources\comet.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\ufo1-1.png" />
+    <Content Include="Resources\ufo1.png" />
+    <None Include="Resources\ufo2-22.png" />
+    <Content Include="Resources\ufo2.png" />
+    <None Include="Resources\ufo3-3.png" />
+    <Content Include="Resources\ufo3.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
